<resources>
    <string name="app_name">Movies_Udacity</string>
    <string name="poster_path">poster_path</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sort_key">popularity.desc</string>
    <string name="pref_title_sort">Sort by</string>
    <string name="pref_default_sort">popularity.desc</string>
    <string name="title_settings_activity">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort_by_popular">Sort by: Popular</string>
    <string name="action_sort_by_rating">Sort by: Rating</string>
    <string name="action_sort">Sort By</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_view_text">Title Text</string>
    <string name="release_view_text">Release Text</string>
    <string name="vote_view_text">Vote Text</string>
    <string name="plot_view_text">Overview Text</string>
    <string name="poster_description">Poster for Movie</string>
    <string name="review_view_text">No Reviews Found</string>
    <string name="favorite_button_text">Favorite</string>
    <string name="action_sort_by_favorite">Sort by: Favorite</string>
    <string name="trailer_view_text">No Trailers Found</string>
    <string name="trailer_name">No_Trailers_Found</string>
    <string name="review_author">Author</string>
    <string name="review_title">Title</string>
</resources>
