<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity$MainFragment">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="1"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_popular"
        android:title="@string/action_sort_by_popular"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_rating"
        android:title="@string/action_sort_by_rating"
        android:orderInCategory="20"
        app:showAsAction="never" />

</menu>